--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   lottie: ^2.3.2
   loading_indicator: ^3.1.1
   fluttertoast: ^8.2.2
+  google_ml_kit: ^0.16.3
+  google_mlkit_face_detection: ^0.9.0
 
 dev_dependencies:
   flutter_test:
