--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   fluttertoast: ^8.2.2
   google_ml_kit: ^0.16.3
   google_mlkit_face_detection: ^0.9.0
+  firebase_ml_model_downloader: ^0.2.4+4
+  image: ^4.1.3
+  tflite_flutter: ^0.10.3
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,6 +78,7 @@ flutter:
     - Assets/face_loading_2.json
     - Assets/face_loading_3.json
     - Assets/face_loading_4.json
+    - Assets/ml/mobilefacenet.tflite
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
